--- a/npcs/kablam.yaml
+++ b/npcs/kablam.yaml
@@ -123,7 +123,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: other (you will be asked to specify)
+    race: Kenku
 
     #
     # The sub-race can be anything.
@@ -401,7 +401,9 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Kablam's earliest memory is the explosion that took her family. After wandering the wilderness on her own for a while, she made her way into the city. While trying to steal some food for herself, she was scouted and recruited by members of the local Thieve's Guild. Knowing of the nature Kenku, she was quickly trained to perform various services for the guild. Her quick fingers make her an excellent pickpocket, her mimicry makes her an excellent spy and forger. She does as she's told and she does it well.
+      Kablam's earliest memory is the explosion that took her family. After wandering the wilderness on her own for a while, she made her way into the city. While trying to 
+      steal some food for herself, she was scouted and recruited by members of the local Thieve's Guild. Knowing of the nature Kenku, she was quickly trained to perform various 
+      services for the guild. Her quick fingers make her an excellent pickpocket, her mimicry makes her an excellent spy and forger. She does as she's told and she does it well.
 
     #
     # Personality (or something like that):
