--- a/npcs/slithkyrin.yaml
+++ b/npcs/slithkyrin.yaml
@@ -123,7 +123,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: other (you will be asked to specify)
+    race: Naga
 
     #
     # The sub-race can be anything.
