--- a/npcs/Oswald_Vardklemp.yaml
+++ b/npcs/Oswald_Vardklemp.yaml
@@ -511,7 +511,7 @@ npc:
     - Legendary Resistance: (3/Day), If Oswald Vardklemp fails a saving throw he can choose to succeed instead 
     - Legendary Actions: Oswald Vardklemp can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
                          Oswald Vardklemp regains spent Legendary Actions at the start of his turn
-      - Janets Swing: Oswald Vardklemp can instruct his Steel Guardian to make an extra attack
+      - Rosies Swing: Oswald Vardklemp can instruct his Steel Guardian to make an extra attack
       - Gatling Burst: Oswald Vardklemp can make an extra attack with his gatling gun
       - Escape Velocity: Oswald Vardklemp can summon his Iron Horse, mount it and dash up to 60 feet
 
@@ -524,7 +524,7 @@ npc:
                        Range 60/240, Heavy, Two-Handed
     - Random Artifact Devices - Can be carrying whatever he needs
     - Artificer's Glasses - Glasses with interchangable lenses that include lenses from Glasses of Hidden Eyes, Eyes of Minute Seeing, Goggles of Indentifying, Eyes of the Eagle, Prismatic Lens and Goggles of Night
-    - Steel Defender - See character sheet for Janet 198 for details
+    - Steel Defender - See character sheet for Rosie 198 for details
     - Iron Horse - His Iron Horse is a clockwork motorcycle powered by his Artificer's Infusion. It can move on it's own and answers his call. It has a speed of 60 feet and can take 30HP damage before it stops running.
     
     
