--- a/npcs/Gerhardt_Klippstein.yaml
+++ b/npcs/Gerhardt_Klippstein.yaml
@@ -338,7 +338,7 @@ npc:
     factions:
     - id: Collegium_Imaginata
       name: Collegium Imaginata
-      role: Founder and Leader
+      role: Director and Lead Designer
 
 
     #
