--- a/npcs/Rosie_198.yaml
+++ b/npcs/Rosie_198.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: Oswald_Vardklemp
+  id: Rosie_198
 
   #
   # The name of the submitter (your name).
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-04-02"
+  date: "2021-04-07"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Oswald Vardklemp
+  name: Rosie 198
 
   #
   # The NPC artwork.
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: N/A
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Gnome
+    race: Automaton
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Rock Gnome
+    sub-race: Steel Guardian
 
     #
     # Pronouns (case insensitive):
@@ -206,7 +206,7 @@ npc:
     #
     # Required.
     #
-    pronouns: he/him
+    pronouns: they/it
 
     #
     # Occupation(s).
@@ -215,7 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Head and Founder of Collegium Imaginata
+    - Body Guard
     
 
     #
@@ -239,7 +239,7 @@ npc:
     #
     # Required.
     #
-    class: artificer
+    class: Civilian
 
     #
     # D & D subclasses (case insensitive):
@@ -262,7 +262,7 @@ npc:
     #
     # Required.
     #
-    subclass: Battle Smith
+    subclass: N/A
 
     #
     # Class level.
@@ -271,7 +271,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 18
+    level: 0
 
     #
     # Alignments (case insensitive):
@@ -287,7 +287,7 @@ npc:
     #
     # Required.
     #
-    alignment: Neutral Good
+    alignment: N/A
 
     #
     # Alignment tendencies:
@@ -313,8 +313,7 @@ npc:
     languages:
     - Common
     - Gnomish
-    - Draconic
-    - Sylvan
+
 
 
     #
@@ -338,7 +337,7 @@ npc:
     factions:
     - id: Collegium_Imaginata
       name: Collegium Imaginata
-      role: Founder and Leader
+      role: Body Guard
 
 
     #
@@ -347,9 +346,9 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Brilliant
-    - Commanding
-    - Reckless
+    - Alert
+    - Observant
+    - Compliant
 
   improv:
 
@@ -364,7 +363,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  "OUT OF THE WAY!!!" shouts the fat bald gnome as the steam contraption smashes it's way down the street
+    introduction:  "Please step away from the professor" comes the buzzing voice from the massive steel automaton as its fist clenches
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -375,7 +374,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Short even by gnome standards, fat, bald and disheveled, wearing multi-lensed thick glasses and a tiny lab coat
+    appearance:   Tall and broad, built of gleaming silver steel and bronze with a massive fist on one arm and a cannon on the other 
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -391,7 +390,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "All science is magic to the untrained eye" "I'll replace all work beasts with artifice, no more need of horses or oxen"
+    expressions:  "Yez boss", "Rosie Understands", "You are in unreeasonable proximity to the professor without his express permission"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -404,7 +403,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   gesticulates wildly when he speaks. Constantly fiddles with his multi-lense glasses
+    mannerisms:   Clicks and whirs as it moves. Steam seeps out of its joint
 
   acting:
     #
@@ -414,7 +413,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      The pursuit of knowledge  
+      Protecting its creator  
       
     #
     # Passions:
@@ -423,7 +422,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Artifice!
+      N/A
       
     #
     # Vulnerabilities:
@@ -432,7 +431,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      Reckless in his pusuit of knowledge
+      Not a big thinker
       
     #
     # Secrets:
@@ -441,22 +440,22 @@ npc:
     # ???Maximum length???
     #
     secrets: |
-      The Collegium Imaginata is secretly an extraplanar extension of Ravnica's Izzet League
+      N/A
       
   #
   # The D & D stats block:
   # All integers.
   #
   stats:
-    armour-class: 16
-    hit-points: 154
-    speed: 25
-    str: 14
-    dex: 17
-    con: 16
-    int: 26
-    wis: 20
-    cha: 19
+    armour-class: 17
+    hit-points: 99
+    speed: 40
+    str: 20
+    dex: 18
+    con: 14
+    int: 4
+    wis: 10
+    cha: 6
 
   #
   # Special characteristics.
@@ -467,66 +466,28 @@ npc:
   #
   specialties:
     skills:
- - - Rock Gnome Abilities:
-      - Gnome Cunning: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
-      - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-      - Artificers Lore: Whenever making an History check related to magic items, alchemical objects and technological devices, add twice your proficiency bonus 
-      - Tinker: Proficiency with Tinker's Tools, can create clockwork divice with 1hr and 10gp worth of material - Clockwork Toy, Fire Starter, Music Box
- 
-  - - Artificer Abilities:
-      - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-      - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 22
-        Cantrip: Guidance, Mage Hand, Mending, Message
-        1st Level: Arcane Weapon, Detect Magic, Identify, Catapult
-        2nd Level: Arcane Lock, Heat Metal, Levitate
-        3rd Level: Dispel Magic, Haste, Tiny Servant
-        4th Level: Fabricate, Stone Shape, Leomund's Secret Chest
-        5th Level: Animate Object
-        
-      - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,  
-      - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
-      - Tool Expertise: Smith's Tool proficiency bonus is doubled
-      - Flash of Genius: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws
-      - Magic Item Adept: Crafting items of common or uncommon takes a quarter of the normal time and half the normal cost
-      - Spell Storing Item: Can store a spell in and object once per long rest
-      - Magic Item Savant: Can attune to any magic item regardless of class, race, spell and level requirements 
-      - Magic Item Master: Can attune to 6 magic items      
-      
-  - - Battle Smith Abilities:
-      - Tool Proficiency: Proficiency with Tinker's Tools, Thieve's Tools and Smith's Tools
-      - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 24
-        3rd Level: Heroism, Shield
-        5th Level: Branding Smite, Warding Bond
-        9th Level: Aura of Vitality, Conjure Barrage
-        13th Level: Aura of Purity, Fire Shield
-        17th Level: Banishing Smite, Mass Cure Wounds
-      - Battle Ready: Proficient with Martial Weapons. When attacking with magic weapons can add intelligence modifier instead of strength or dexterity modifier to attack and damage rolls
-      - Steel Defender: Can build a clockwork creature with the Steel Defender Stat Block once per long rest  
+ - - Steel Defender Abilities:
+      - Proficiencies: Proficiency Bonus +6 - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
+      - Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
+      - Darkvision: 60ft. Passive Perception 22
+      - Vigilant: Can't be surprised
+      - Force Empowered Rend: Using a +8 Spellcasting modifier to hit one target within 5ft. Deals 1d8+6 force damage.
+      - Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
       - Extra Attack: Can take a second attack action each turn
-      - Arcane Jolt: Using a magic weapon or Steel Defender he can add 4d6 force damage to attacks or restore 4d6 hit points to any creature or object within 30 feet
-      - Improved Defender: Steel Defender gets +2 to its AC and its Deflect Attack does 1d4 + Intelligence Modifier damage.
-
-    special-abilities: 
-    - Feats: Gunner, Keen Mind, Mounted Combatant, Sharpshooter, War Caster, Skill Expert - Smith's Tools, Observant, Fighting Initiate, Medium Armor Master
-    - Legendary Resistance: (3/Day), If Oswald Vardklemp fails a saving throw he can choose to succeed instead 
-    - Legendary Actions: Oswald Vardklemp can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                         Oswald Vardklemp regains spent Legendary Actions at the start of his turn
-      - Rosies Swing: Oswald Vardklemp can instruct his Steel Guardian to make an extra attack
-      - Gatling Burst: Oswald Vardklemp can make an extra attack with his gatling gun
-      - Escape Velocity: Oswald Vardklemp can summon his Iron Horse, mount it and dash up to 60 feet
+      - Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
+                        The attacker takes 1d4+8 force damage. 
+      - Intimidate: It is an imposing sight and all those seeing it for the first time mus make a DC 12 Wisdom save or become firghtened for 1 round                  
+ 
 
     attacks: |
-      Can make 2 attacks with his firearms and his Steel Defender can attack twice 
+      Can attack 2x per round 
     combat-tactics: |
-      He'll go out of his way to avoid direct physical combat but will range attack with his firearms and send his Steel Defender in for close quarters combat. If his Steel Defender falls, he will run 
+      It will attack with its Force Empowered Rend, it's fist in close quarters and its gatling cannon for ranged attacks
     special-equipment:
-    - Gatling Cannon - Fires multiple shots at a single target doing 5d12 damage on a failed Dex save with DC 18, or do a sweeping attack targetting each creature within 30 feet doing 1d12 on a failed Dex save with DC 18. 
-                       Range 60/240, Heavy, Two-Handed. Can fire 5 bursts before needing to be reloaded. Reloading takes 1 round.
-    - Random Artifact Devices - Can be carrying whatever he needs
-    - Artificer's Glasses - Glasses with interchangable lenses that include lenses from Glasses of Hidden Eyes, Eyes of Minute Seeing, Goggles of Indentifying, Eyes of the Eagle, Prismatic Lens and Goggles of Night
-    - Steel Defender - See character sheet for Rosie 198 for details
-    - Iron Horse - His Iron Horse is a clockwork motorcycle powered by his Artificer's Infusion. It can move on it's own and answers his call. It has a speed of 60 feet and can take 30HP damage before it stops running.
-    
+    - Steel Fist: Does 1d8+5 damage
+    - Gatling Cannon: Fires multiple shots at a single target doing 7d12 damage on a failed Dex save with DC 16, or do a sweeping attack targetting each creature within 30 feet doing 2d12 on a failed Dex save with DC 16. 
+                      Range 60/240, Heavy, (Two-Handed for anyone but Rosie 198). Can fire 10 bursts before needing to be reloaded. Reloading takes assistance from Oswald Vardklemp and 3 rounds.
+    - Jet Pack: (4/Day) Can fly in a single burst of up to 60ft
     
   profile:
 
@@ -538,12 +499,9 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Oswald Vardklemp is the founder, leader and head designer of the Collegium Imaginata, a group of loosley aligned artificers, mages and scientists dedicated to the technological advancement of society. Oswald had 
-      gradually made his name as an artificer, building his reputation throughout the land as great and dedicated, if slightly reckless, inventor. One day Oswald was visited in his labratory by a strange traveller. That 
-      visitor was Ral Zarek, Guildmaster of the Izzet League from the plane of Ravnica, and renouned Planeswalker. Master Zarek spoke to Oswald and regaled him with tales of the Izzet and their great world-altering scientific 
-      discoveries back on Ravnica and convinced Oswald of the merits of creating a consortium of ideas and opening a permanent channel of communication with the Izzet League. Oswald then set about, with some financial aid 
-      from the Izzet, bulding Collegium compounds in most major cities throughout the world and inviting prominent artificers, mages and scientists to join, learn, work and share. He continues to function as the leader and 
-      spokesman for the Collegium while continuing his own research and development.
+      Rosie 198 is the 198th upgrade of the Robotic Oswald Shield Interceptor Engine. It is a large, magic, steam and hydrolic powered construct made of gleaming steel and bronze. It is bipedaled with broad shoulders 
+      and a small bronze humanoid head. Two long arms, one ends in a huge steel prehensile hand and the other ends in a massive gatling cannon similar to the one it's master has, but much much bigger. Rosie 198 is 
+      an imposing force and does it's job well.
       
     #
     # Personality (or something like that):
@@ -554,11 +512,8 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Oswald Vardklemp is short, even for a rock gnome. He is also quite overweight, about as wide as he is tall. He is bald with a big bushy beard. He wears rumpled clothing and a long (for him) lab coat and his 
-      Artificer's Glasses. Oswald is a brilliant mind and artificer as well as a competent and attention commanding leader. He is driven and devoted, but is known to be gruff and easily infuriated when his work is 
-      interupted. He is also known to be fairly reckless when testing his new devices and contraptions and now and again manages to do some significant damage to Collegium compounds and the surrounding cities with 
-      out of control inventions. He has kept the indentity of of the Collegium's benefactors and their exraplanar origins to himself, but meets quarterly at secret location with Ral Zarek to maintain communication 
-      channels.
+      Rosie 198 is completely loyal to Oswald Vardklemp and will do whatever he tells it and will defend him to it's death or his. It is sentient and capable of operating and reasoning on it own if Oswald becomes 
+      incapacitated, but is definitely not very smart. Due to the nature of its construction, nobody but Oswald can control it under any circumastance.
   #
   # Content that does not get displayed, but could be useful
   # to humans.  Includes review comments, notes about what to
