--- a/npcs/Cedric_Wrath.yaml
+++ b/npcs/Cedric_Wrath.yaml
@@ -362,7 +362,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  "Git yee right wit yer Gods ya heathens!" shouts the fiery red-faced preacher from his street side podium
+    introduction:  "Git yee right wit yer Gods ya heathens!" shouts the fiery red-faced oddly preacher from his street side podium
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
