--- a/npcs/Rosie_198.yaml
+++ b/npcs/Rosie_198.yaml
@@ -390,7 +390,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Yez boss", "Rosie Understands", "You are in unreasonable proximity to the professor without his express permission"
+    expressions:  "Yez boss", "Rosie Understands", "You are in unreeasonable proximity to the professor without his express permission"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
